fixed background color cutting off

--- a/apps/bpi/src/app/congrats/congrats.component.scss
+++ b/apps/bpi/src/app/congrats/congrats.component.scss
@@ -1,6 +1,8 @@
 .app-container {
   background-color: #b20000;
   height: 100%;
+  min-height: 100vh;
+  padding-bottom: 20px;
 }
 
 .game-container {
