--- a/apps/bpi/src/styles.scss
+++ b/apps/bpi/src/styles.scss
@@ -3,7 +3,7 @@
 html {
   font-size: 62.5%;
   font-style: normal;
-  height: 100%;
+  min-height: 100vh;
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
